[package]
name = "scheme-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0"}
clap = {version = "4.0", features = ["derive"]}
rustyline = {version = "10.0"}
lazy_static = {version = "1.4"}